5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1613_1804.log
== TEST (2019-04-04 19:02:46) 
-- CODE:
from math import*
xa= float(input("escolha um numero"))
xb= float(input("escolha um numero"))
ya= float(input("escolha um numero"))
yb= float(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqr((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d= sqr((xb-xa)**2 + (yb-ya)**2)
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:03:18) 
-- CODE:
from math import*
xa= float(input("escolha um numero"))
xb= float(input("escolha um numero"))
ya= float(input("escolha um numero"))
yb= float(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:03:54) 
-- CODE:
from math import*
xa= float(input("escolha um numero"))
xb= float(input("escolha um numero"))
ya= float(input("escolha um numero"))
yb= float(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:05:16) 
-- CODE:
from math import*
xa= int(input("escolha um numero"))
xb= int(input("escolha um numero"))
ya= int(input("escolha um numero"))
yb= int(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:07:27) 
-- CODE:
from math import*
xa= float(input("escolha um numero"))
ya= float(input("escolha um numero"))
xb= float(input("escolha um numero"))
yb= float(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:07:35) 
-- CODE:
from math import*
xa= float(input("escolha um numero"))
ya= float(input("escolha um numero"))
xb= float(input("escolha um numero"))
yb= float(input("escolha um numero"))
A= (xa,ya)
B= (xb,yb)
d= sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(d, 3))
-- EXECUTION TIME:
0.152714
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
